# zephyr

boards/arm/stm32mp157c_dk2/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.h  stm32mp157c_dk2.dts  stm32mp157c_dk2.yaml  stm32mp157c_dk2_defconfig
boards/arm/stm32mp157c_dk2/doc/: stm32mp157_disco.rst
drivers/interrupt_controller/: Kconfig.stm32  exti_stm32.c
dts/arm/st/mp1/: stm32mp157.dtsi
ext/hal/st/stm32cube/: CMakeLists.txt
ext/hal/st/stm32cube/stm32mp1xx/: CMakeLists.txt  README
ext/hal/st/stm32cube/stm32mp1xx/drivers/include/: stm32mp1xx_hal_conf.h  stm32mp1xx_ll_exti.h
ext/hal/st/stm32cube/stm32mp1xx/drivers/src/: stm32mp1xx_ll_exti.c
include/linker/: common-rom.ld  section_tags.h  sections.h
samples/subsys/ipc/openamp/: README.rst
samples/subsys/ipc/openamp/master/src/: main_master.c
samples/subsys/ipc/openamp/platform/: platform.c  platform.h  platform_info.c  platform_ops.c  resource_table.c  resource_table.h
samples/subsys/ipc/openamp/remote/: CMakeLists.txt  prj.conf
samples/subsys/ipc/openamp/remote/src/: main_remote.c
soc/arm/st_stm32/stm32mp1/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.defconfig.stm32mp15_m4  Kconfig.series  Kconfig.soc  dts_fixup.h  linker.ld  resource_table.c  resource_table.h  soc.c  soc.h
